--- a/app/app/views/diaries/new.html.erb
+++ b/app/app/views/diaries/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Diary</h1>
+<div class="container">
+  <h1 class="title">New Diary</h1>
 
-<%= render 'form', diary: @diary %>
+  <%= render 'form', diary: @diary %>
 
-<%= link_to 'Back', diaries_path %>
+  <%= link_to 'Back', diaries_path, class: 'button is-link' %>
+</div>
