add Notice component

--- a/app/app/views/diaries/index.html.erb
+++ b/app/app/views/diaries/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <p id="notice"><%= notice %></p>
+  <%= react_component("Notice", { message: notice }) %>
 
   <h1 class="title">Diaries</h1>
 
