--- a/app/app/views/diaries/show.html.erb
+++ b/app/app/views/diaries/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <p id="notice"><%= notice %></p>
+  <%= react_component("Notice", { message: notice }) %>
 
   <div class="columns">
     <div class="column">
